# google-ai-hack-2026

./: .gitignore  README.md
backend/: BACKEND.md  agents.py  auth.py  council_orchestrator.py  main.py  models.py  pyproject.toml  requirements.txt  supabase_client.py
backend/app/: agent.py  brave.py  council.py  council_agents.py  database.py  main.py  models.py  voice.py
backend/migrations/: 001_schema.sql
frontend/: FRONTEND.md  index-demi.html  index.html  package-lock.json  package.json  stock-demi.html  stock.html  stocks-demi.html  stocks.html  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: supabase.ts
frontend/src/pages/: LoginPage.tsx  StockDetailPage.tsx  WatchlistPage.tsx
