[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "fpdf2>=2.8.7",
    "mplfinance>=0.12.10b0",
    "pydantic-ai>=1.80.0",
    "supabase>=2.28.3",
    "yfinance>=1.2.1",
]
